plugins {
    id 'java'
    id 'jacoco'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'ru.nsu.gaskov.snake'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'ru.nsu.gaskov.snake.SnakeGame'
}

run {
    jvmArgs = [
            '--module-path', '/home/miron/Downloads/javafx-sdk-21.0.6/lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
